--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/json-server": "^0.14.4",
+    "@types/lodash": "^4.14.186",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.1.3",
+    "json-server": "^0.17.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-router-dom": "^6.4.2",
     "styled-components": "^5.3.6"
   },
