--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^4.6.0",
     "react-loading-skeleton": "^3.1.0",
     "react-router-dom": "^6.4.2",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.3",
